--- a/Flappy Boy/index.html
+++ b/Flappy Boy/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title> Flappy Bird Clone </title>
+    <title> Flappy Boy 0.1 </title>
     <meta name="viewport" content="initial-scale=1.0" />
 
     <script type="text/javascript" src="js/phaser.min.js"></script>
