--- a/Flappy Boy/index.html
+++ b/Flappy Boy/index.html
@@ -5,6 +5,12 @@
     <title> Flappy Bird Clone </title>
     <meta name="viewport" content="initial-scale=1.0" />
 
+    <style> 
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    </style> 
     <script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </head>
